--- a/enhanced_portfolio.html
+++ b/enhanced_portfolio.html
@@ -1651,7 +1651,11 @@
                         description: "• Maintained and published 'Samma3t Hakeem' health app → 20% satisfaction surge<br>• Pioneered full-stack e-commerce ecosystem using Flutter/Laravel<br>• Developed comprehensive mobile solutions for healthcare sector",
                         detailedDescription: "Led mobile application development initiatives focusing on healthcare and e-commerce solutions. Successfully maintained and enhanced the 'Samma3t Hakeem' health application, resulting in significant user satisfaction improvements and increased market penetration.",
                         media: [
-                            
+                            {
+                                type:"image",
+                                src:"./assets/images/WhatsApp Image 2025-05-06 at 04.33.53_af0dca65.jpg",
+                                caption:"My business card"
+                            }
                         ],
                         links: []
                     },
