--- a/enhanced_portfolio.html
+++ b/enhanced_portfolio.html
@@ -1655,6 +1655,11 @@
                                 type:"image",
                                 src:"./assets/images/WhatsApp Image 2025-05-06 at 04.33.53_af0dca65.jpg",
                                 caption:"My business card"
+                            },
+                            {
+                                type:"image",
+                                src:"./assets/images/WhatsApp Image 2025-05-06 at 04.33.53_af0dca65.jpg",
+                                caption:"My business card"
                             }
                         ],
                         links: []
