edit icon fa-bolt-lightning

--- a/enhanced_portfolio.html
+++ b/enhanced_portfolio.html
@@ -1584,7 +1584,7 @@
                         description: "Advanced image and video processing using YOLO, OpenCV, and MediaPipe. Real-time object detection, pose estimation, and visual intelligence systems."
                     },
                     {
-                        icon: "fas fa-lightning-bolt",
+                        icon: "fas fa-bolt-lightning",
                         title: "Rapid AI Deployment",
                         description: "From concept to production in record time. Leveraging cutting-edge AI frameworks and cloud technologies for fastest delivery without compromising quality."
                     }
