--- a/portfolio.html
+++ b/portfolio.html
@@ -1655,11 +1655,6 @@
                                 type:"image",
                                 src:"./assets/images/WhatsApp Image 2025-05-06 at 04.33.53_af0dca65.jpg",
                                 caption:"My business card"
-                            },
-                            {
-                                type:"image",
-                                src:"./assets/images/WhatsApp Image 2025-05-06 at 04.33.53_af0dca65.jpg",
-                                caption:"My business card"
                             }
                         ],
                         links: []
@@ -1711,7 +1706,7 @@
                     {
                         name: "Databases & Tools",
                         icon: "fas fa-database",
-                        skills: ["Oracle", "MySQL", "PostgreSQL", "Vector Databases", "Streamlit", "Git"]
+                        skills: ["Oracle", "MySQL", "Vector Databases", "Streamlit", "Git"]
                     }
                 ]
             },
